add social in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     ?>
     <div style="text-align: center">
       <h3>- [YufkaBoi] -</h3>
+      <p>Soc: Axolordl</p>
     </div>
   </body>
 </html>
