--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <script type="module">
       import test from "./main.js";
     </script>
+    <script type="javascript">
+      window.alert("sometext");
+    </script>
   </head>
   <body>
     <div style="text-align: center">
