add css to body

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
       window.alert("sometext");
     </script>
   </head>
-  <body>
+  <body style="
+      background-color: #96004b;
+      color: #ed6fae;
+    ">
     <div style="text-align: center">
-      <h3>- [YufkaBoi] -</h3>
+      <h2>- [YufkaBoi] -</h2>
       <p>Soc: Axolordl</p>
     </div>
   </body>
