update background color styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </script>
   </head>
   <body style="
-      background-color: #96004b;
+      background-color: #800952;
       color: #ed6fae;
     ">
     <div style="text-align: center">
